# parallelcoursec

./: README.md
lab_1/: auto_experiment.py  build.sh  main.c  output.ods  output_clang.ods
lab_2/: CMakeLists.txt  auto_experiment.py  build.sh  main.c  out128clang.csv  out128intel.csv  output_clang.ods  output_intel.ods
lab_3/: CMakeLists.txt  build.sh  main.c  output_clang.csv  output_clang.ods  output_clang_dynamic1.csv  output_clang_dynamic16.csv  output_clang_dynamic2.csv  output_clang_dynamic3.csv  output_clang_dynamic8.csv  output_clang_guided1.csv  output_clang_guided16.csv  output_clang_guided2.csv  output_clang_guided3.csv  output_clang_guided8.csv  output_clang_static1.csv  output_clang_static16.csv  output_clang_static2.csv  output_clang_static3.csv  output_clang_static8.csv  output_dynamic_clang.ods  output_dynamic_gcc.ods  output_gcc.csv  output_gcc.ods  output_gcc_dynamic1.csv  output_gcc_dynamic16.csv  output_gcc_dynamic2.csv  output_gcc_dynamic3.csv  output_gcc_dynamic8.csv  output_gcc_guided1.csv  output_gcc_guided16.csv  output_gcc_guided2.csv  output_gcc_guided3.csv  output_gcc_guided8.csv  output_gcc_static1.csv  output_gcc_static16.csv  output_gcc_static2.csv  output_gcc_static3.csv  output_gcc_static8.csv  output_guided_clang.ods  (+3 more)
lab_4/: CMakeLists.txt  auto_experiment.py  build.sh  main.c  output_gcc.csv  output_gcc_red_00.csv  output_gcc_red_01.csv  output_gcc_red_02.csv  output_gcc_red_03.csv  output_gcc_red_04.csv  output_gcc_red_05.csv  output_gcc_red_06.csv  output_gcc_red_07.csv  output_gcc_red_08.csv  output_gcc_red_09.csv  (+1 more)
